--- a/Dockerfile.centos.icewm.vnc
+++ b/Dockerfile.centos.icewm.vnc
@@ -13,7 +13,7 @@ LABEL io.k8s.description="Headless VNC Container with IceWM window manager, fire
 
 ## Connection ports for controlling the UI:
 # VNC port:5901
-# noVNC webport, connect via http://IP:6901/?password=vncpassword
+# noVNC webport, connect via http://IP:6901/?password=GuGuGuGe
 ENV DISPLAY=:1 \
     VNC_PORT=5901 \
     NO_VNC_PORT=6901
@@ -26,8 +26,8 @@ ENV HOME=/headless \
     INST_SCRIPTS=/headless/install \
     NO_VNC_HOME=/headless/noVNC \
     VNC_COL_DEPTH=24 \
-    VNC_RESOLUTION=1280x1024 \
-    VNC_PW=vncpassword \
+    VNC_RESOLUTION=1366x768 \
+    VNC_PW=GuGuGuGe \
     VNC_VIEW_ONLY=false
 WORKDIR $HOME
 
